--- a/tests/02_rpath_of_parents_parent/Makefile
+++ b/tests/02_rpath_of_parents_parent/Makefile
@@ -1,9 +1,11 @@
 # This creates exe <- liba.so <- libb.so
 # where liba.so cannot directly locate libb.so, but it *can* through exe's rpaths.
 
-all: check
+LD_LIBRARY_PATH:=
 
 .PHONY: clean
+
+all: check
 
 libb.so: 
 	echo 'int g(){return 1;}' | $(CC) -shared -Wl,-soname,$@ -o $@ -nostdlib -x c -
@@ -16,6 +18,7 @@ exe: liba.so
 
 check: exe liba.so
 	../../libtree liba.so  # should not find libb.so
+	LD_LIBRARY_PATH=$(CURDIR) ../../libtree liba.so  # should find libb.so through LD_LIBRARY_PATH
 	../../libtree exe  # should find libb.so through exe's rpath
 
 clean:
